corrected the dialog overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: space-between;
   z-index: 3;
+  overflow: hidden;
 }
 
 .pages-wrapper {
