--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -6,6 +6,7 @@
   background-image: url(../../assets/education/bg.png);
   background-size: cover;
   box-shadow: inset 0 0 150px rgba(0, 0, 0, 1);
+  overflow: hidden;
 }
 
 .carousel::before {
